more minor changes

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <p>Hi there!</p>
 <p>welcome welcome</p>
 <h1>My Page</h1>
+<p>My name is <strong>zhz17</strong>.</p>
+<p>My favorite color is <span style="color:blue">blue</span>.</p>
